tdf#136441 ms export: don't export comments in footnotes

Microsoft UI does not allow comments in footnotes,
or in headers/footers, or endnotes,
so just throw them away for all MS formats.
This avoids the biggest problem,
which was an error in LO reading the DOCX.

Prior to this bug fix, the status was:
DOCX:
Word 2016 opens it ok, but no comment in footnote.
Word 2003 hangs.
LO loads but has a SAX error the user must ignore,
and no comment seen in the footnote anyway.

DOC:
Word 2016 opens, but misses the main body text,
and of course no comment in footnote.
Word 2003 opens, sees the main body text just fine,
and no comment in footnote.
LO loads, but no comment seen in footnote anyway.

RTF:
Word 2016/2003 open, and no comment in footnote.
LO loads, but no comment seen in footnote anyway.

If the SAX error problem could be fixed, then perhaps
it would be worth allowing LO to export comments
to DOCX for its own benefit. In that case, allow
    case SwFieldIds::Postit:
            PostitField( pField );

This patch does not fix the problem where the body
text is missing in Word 2016 in DOC format.

Change-Id: I0b7389616a2207d41ae525dbc0b2eea536364d90